# pocket-ic-live-issue

./: .gitignore  Cargo.toml  Justfile  README.md  dfx.json
echo-http/: .gitignore  index.js  package.json
just/: build.just  test.just
src/did/: Cargo.toml
src/did/src/: lib.rs
src/integration-tests/: Cargo.toml
src/integration-tests/tests/: integration_tests.rs
src/integration-tests/tests/context/: mod.rs  wasm.rs
src/my_canister/: Cargo.toml
src/my_canister/src/: canister.rs  lib.rs
