[workspace]
members = ["src/my_canister", "src/did", "src/integration-tests"]
resolver = "2"


[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
candid = { version = "0.10", features = ["value"] }
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-test-utils = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-test-utils", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
once_cell = "1.8"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "rt"] }

[profile.dev]
debug = false


# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

[profile.release]
# opt-level = "z"
lto = true
codegen-units = 1
