[workspace]
members = ["src/my_canister", "src/did", "src/integration-tests"]
resolver = "2"


[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
candid = { version = "0.10", features = ["value"] }
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", tag = "v0.24.x" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", tag = "v0.24.x" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", tag = "v0.24.x" }
ic-test-utils = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-test-utils", tag = "v0.24.x" }
once_cell = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[profile.dev]
debug = false


# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

[profile.release]
# opt-level = "z"
lto = true
codegen-units = 1
